# techNL-crawler

./: .gitignore  AGENTS.md  README.md  pipeline_1_discover.py  pipeline_2_map.py  pipeline_3_scrape.py  pyproject.toml
.github/workflows/: crawl.yml  pages.yml
data/: companies_state.json  open_jobs.json  pointers.json  scrape_state.json  techNL_companies.md
deploy/: PROVISIONING.md  technl-dashboard.service  technl-producer.service  technl-producer.timer
docs/: index.html  open_jobs.json  summary.json
scripts/: run_producer.sh
src/: discover.py  llm.py  map_careers.py  map_llm_fallback.py  navigate.py  publish.py  scrape.py
techNL_crawler/: dump_pages.py  evaluation_state.json  fix_state.py  issue0_body.md  issue1_body.md  issue2_body.md  issue3_body.md  issue4_body.md  known_jobs.json  main.js  techNL_companies.md
